# ZPulse

./: .gitignore  :w  LICENSE  README.md  meson.build
include/: common.h  settings.h
include/command/: command.h
include/debug/: debug.h
include/effect/: 2d.h
include/game/: effect_2d.h  game.h  grid.h  obj_2d.h  pe_rope.h  rb_2d.h  settings.h
include/input/: controller.h  input.h  keyboard.h  mouse.h  settings.h
include/input/map/: keyboard.h  mouse.h
include/math/: angle.h  f32.h  f32_v2.h  f32_v3.h  f64_v2.h  f64_v3.h  fu16_v2.h  fu16_v3.h  i32_v2.h  i32_v3.h  u32.h  vectors.h
include/phys/: 2d.h  grid.h  hinge.h  init.h  joint.h  mat.h  rope.h  settings.h
include/player/: command.h  input.h  player.h
include/render/: camera.h  filter.h  init.h  render.h  settings.h  shape.h  texture.h
include/utils/: color.h  vector.h
include/window/: glfw.h  settings.h  window.h
src/: test.c
src/command/: command.c
src/game/: game.c  grid.c  obj_2d.c  pe_rope.c  rb_2d.c
src/input/: input.c  keyboard.c  mouse.c
src/input/glfw/: input.c  keyboard.c  mouse.c
src/libs/: stb_image.c
src/math/: angle.c  f32.c  f32_v2.c  fu16_v2.c  u32.c
src/phys/: 2d.c  grid.c  hinge.c  init.c  mat.c  rope.c
src/player/: command.c  input.c
src/render/: camera.c
src/render/glfixed/: init.c  render.c  texture.c
src/utils/: color.c  vector.c
src/window/: glfw.c
tests/: test.tga
